--- a/static/index.html
+++ b/static/index.html
@@ -334,6 +334,7 @@ function update() {
     if (world != response)
     {
         world=response;
+        drawNextFrame();
         drawFrame();
     }
     });
